Close #44: Refactor mapping structure: - Mapping structure - Reader - Deobfuscator - Writer Update license year. Rename package cn.maxpixel.mcdecompiler.mapping1 to cn.maxpixel.mcdecompiler.mapping